--- a/acupuncture-booking/package.json
+++ b/acupuncture-booking/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "moment": "^2.30.1",
     "next": "15.1.6",
